--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background: #000000;
+    background: #7a0019;
     color: white;
     padding: 2rem;
     text-align: center;
