--- a/style.css
+++ b/style.css
@@ -61,21 +61,12 @@ section {
         margin: 1rem 0;
     }
 }
-body.dark {
-    background-color: #121212;
-    color: #e0e0e0;
+
+#learning ul {
+    list-style-type: none;
+    padding-left: 0;
 }
 
-header.dark {
-    background-color: #1f1f1f;
-    color: #f5f5f5;
-}
-
-.project.dark {
-    background-color: #2a2a2a;
-}
-
-/* Optional: make links pop */
-a {
-    color: #61dafb;
+#learning li {
+    margin-bottom: 0.5rem;
 }
