--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section {
 }
 .resume-button {
     display: inline-block;
-    background-color: #444;
+    background-color: #7a0019;
     color: white;
     padding: 0.75rem 1.25rem;
     text-decoration: none;
