--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ section {
 .resume-button {
     display: inline-block;
     background-color: #7a0019;
-    color: white;
+    color: #9d7600;
     padding: 0.75rem 1.25rem;
     text-decoration: none;
     border-radius: 5px;
@@ -90,7 +90,7 @@ section {
 nav {
     position: sticky;
     top: 0;
-    background-color: #000;
+    background-color: #7a0019;
     z-index: 999;
     padding: 0.75rem 0;
     text-align: center;
