--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav {
 }
 
 .navbar a {
-    color: white;
+    color: #9d7600;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s ease;
